test/conformance/chainsaw/reports/admission/exception-expired/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exception-expired
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-labels
  - name: create expired exception
    try:
    - apply:
        file: exception-expired.yaml
  - name: verify configmap without label is blocked
    try:
    - apply:
        file: configmap.yaml
        expect:
        - check:
            ($error != null): true
